Fix display issue on ios

--- a/Oblivion/src/app/components/welcome/welcome.component.css
+++ b/Oblivion/src/app/components/welcome/welcome.component.css
@@ -12,6 +12,7 @@
   position: fixed;
   top: 70%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
 
